[dot product] Fix dot product slowdown
- Fix dot product slowdown due to either scalac or JVM being unable to optimize out vector cast shape operations